--- a/unidad_1/index.html
+++ b/unidad_1/index.html
@@ -17,6 +17,7 @@
         <li><p><b><i><u>Elemento negrita, cursiva y subrayado</u></i></b></p></li>
     </ol>
 
+    <h2>Gael</h2>
     <h2>Titulo 2</h2>
     <h3>Titulo 3</h3>
     <h4>Titulo 4</h4>
